apps-manifests/frontend/dev/frontend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-deploy
  template:
    metadata:
      labels:
        app: frontend-deploy
    spec:
      containers:
        - name: backend
          image: noseyug/applyhub-frontend:e61dc4d
          ports:
            - containerPort: 80
