apps-manifests/frontend/dev/frontend-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ing
spec:
  ingressClassName: nginx
  rules:
    - host: applyhub.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: applyhub.local
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-gateway-svc
                port:
                  number: 4000
